Se registro 2 nuevas pantallas

--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -6,6 +6,7 @@
   <ion-tab #idEstadoDeCuentas tabIcon="paper"  tabTitle="Est. de Ctas" [root]="iEstadoDeCuentasPage" (ionSelect)="oniEstadoDeCuentasPage()" ></ion-tab>
   <!--ion-tab #idSolicitudDestino tabIcon="water" tabTitle="Sol. Ver" [root]="dSolicitudDestinoPage" (ionSelect)="ondSolicitudDestinoPage()" ></ion-tab-->
   <ion-tab #idDisco tabIcon="cloud-download" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
+  <ion-tab #idDiscoMenuPage tabIcon="cloud-download" tabTitle="Discos" [root]="discoMenuPage" (ionSelect)="onDiscoMenuPage()" ></ion-tab>
 </ion-tabs>
 
 
@@ -17,4 +18,5 @@
   <ion-tab #idBorrador tabIcon="cash" tabTitle="Venta" [root]="gBorradorPage" (ionSelect)="ongBorradorPage()" ></ion-tab>
   <ion-tab #idAgrupador tabIcon="filing" tabTitle="Agrupador" [root]="hAgrupadorPage" (ionSelect)="onhAgrupadorPage()" ></ion-tab>
   <ion-tab #idDisco tabIcon="cloud-download" tabTitle="Discos" [root]="discoPage" (ionSelect)="onDiscoPage()" ></ion-tab>
+  <ion-tab #idDiscoMenuPage tabIcon="cloud-download" tabTitle="Discos" [root]="discoMenuPage" (ionSelect)="onDiscoMenuPage()" ></ion-tab>
 </ion-tabs>
