reportes en trsancciones

--- a/src/pages/sistema/reportes-menu/reportes-menu.html
+++ b/src/pages/sistema/reportes-menu/reportes-menu.html
@@ -37,7 +37,7 @@
             <ion-radio value="stock_con_precio" checked="true"></ion-radio>
           </ion-item>
           <ion-item>
-            <ion-label>Entregas a Tienda (desde {{ 'T1' }})</ion-label>
+            <ion-label>Entregas desde esta sucursal/almacen</ion-label>
             <ion-radio value="entrega_stock_tienda"></ion-radio>
           </ion-item>
           <ion-item>
@@ -53,20 +53,21 @@
             <ion-radio value="estado_de_cuentas"></ion-radio>
           </ion-item>
           <ion-item>
-            <ion-label>Detalle de Movimientos (?)</ion-label>
-            <ion-radio value="06"></ion-radio>
-          </ion-item>
-          <ion-item>
             <ion-label>Llegada a Almacen</ion-label>
             <ion-radio value="pedido_llegada_report"></ion-radio>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Detalle de Movimientos (?)</ion-label>
+            <ion-radio value="06"></ion-radio>
           </ion-item>
           <ion-item>
             <ion-label>Ventas en Almacen (?)</ion-label>
             <ion-radio value="dotnet"></ion-radio>
           </ion-item>
           <ion-item>
-            <ion-label>Stock de Articulos</ion-label>
-            <ion-radio value="dotnet"></ion-radio>
+            <ion-label>Stock de Articulos (lo mismo que existencia) </ion-label>
+            <ion-radio value="dotnet2"></ion-radio>
           </ion-item>
 
         </ion-list>
