--- a/src/pages/sistema/disco-menu/disco-menu.html
+++ b/src/pages/sistema/disco-menu/disco-menu.html
@@ -20,19 +20,19 @@
       </ion-card-content>
   </ion-card>
   <ion-card>
-    <ion-card-content  (click)="prepararDescarga()">
+    <ion-card-content  >
       <img src="../../../assets/imgs/marty-avatar.png">
       <p>Elija esta opcion cuando desee <ion-badge>enviar a las sucursales</ion-badge> las actualizaciones de STOCK Y ENTREGAS de su central o sucursal</p>
-      
+
       <ion-row>
         <ion-col></ion-col>
         <ion-col>
-          <button ion-button clear small [disabled]="true">
-           Descargar a un directorio
+          <button ion-button clear small [disabled]="true" (click)="prepararDescarga()">
+           Descargar
           </button>
         </ion-col>
       </ion-row>
-      
+
     </ion-card-content>
   </ion-card>
   <ion-card>
@@ -40,14 +40,15 @@
       <img src="../../../assets/imgs/marty-avatar.png" >
       <p>Elija esta opcion cuando desee <ion-badge>recibir la informacion</ion-badge> acerca de las VENTAS y CUENTAS de las sucursales o central</p>
       <ion-row>
-          <ion-col></ion-col>
-          <ion-col>
-              <input type="file" id="file" (change)="files($event.target.files)">
-
-              <button ion-button clear small [disabled]="true">
-                  Cargue un archivo para procesar en su base
+          <ion-col *ngIf="file==null"><ion-label>Cargue un archivo antes de continuar</ion-label></ion-col>
+          <ion-col><input type="file" id="file" (change)="files($event.target.files)"></ion-col>
+          <ion-col *ngIf="file!=null" >
+              <button ion-button clear small (click)="upload()">
+                  click aqui para ejecutar archivo a mi base
               </button>
           </ion-col>
+      </ion-row>
+      <ion-row>
       </ion-row>
     </ion-card-content>
   </ion-card>
