Modificaciones solicitadas por Don Jaime, whattsup

--- a/src/pages/sistema/producto/producto.html
+++ b/src/pages/sistema/producto/producto.html
@@ -12,7 +12,7 @@
                         [disabled]="!esActualizar">
                     <i class="pi pi-trash"></i> 
                 </button>
-                <button ion-button outline  
+                <button ion-button outline *ngIf="false" 
                         (click)="onReporte()"
                         [disabled]="!esActualizar">
                     <i class="pi pi-print"></i>
