--- a/src/pages/sistema/transaccion/a-detalle/a-detalle.html
+++ b/src/pages/sistema/transaccion/a-detalle/a-detalle.html
@@ -88,18 +88,33 @@
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-rowData let-columns="columns">
-                    <tr [pSelectableRow]="rowData" (click)="onSubTotal()">
-                        <td *ngFor="let col of columns" class="ui-resizable-column">
-                            {{rowData[col.field]}}
-                        </td>
-                    </tr>
+                  <tr [pSelectableRow]="rowData" (click)="onSubTotal()">
+                    <td>
+                        {{rowData['codigo']}}
+                    </td>
+                    <td style="text-align: center;">
+                        {{rowData['fechaMovimiento']}}
+                    </td>
+                    <td style="text-align: center">
+                        {{ rowData['cantidad'] }}
+                    </td>
+                    <td style="text-align: right">
+                      {{rowData['precio'] | number:'1.2-2' }}
+                    </td>
+                    <td style="text-align: center;">
+                      {{rowData['nroMovimiento']}}
+                    </td>
+                    <td>
+                      {{rowData['observacion']}}
+                    </td>
+                  </tr>
                 </ng-template>
                 <ng-template pTemplate="footer">
                     <tr>
-                        <td>Cantidad</td>
+                        <td>Cantidad Total</td>
                         <td>{{ tcan }}</td>
-                        <td>Precio</td>
-                        <td>{{ tprec | number:'1.2-2' }}</td>
+                        <td>Precio Total</td>
+                        <td style="text-align: right">{{ tprec | number:'1.2-2' }}</td>
                     </tr>
                 </ng-template>
     </p-table>
